<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TelaPrincipal">


    <ImageView
        android:id="@+id/containerUser"
        android:layout_marginTop="15dp"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:src="@drawable/lego"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textCReal"
        android:text="@string/titulo_consumo_real"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/containerUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/text_real1"
        android:text="@string/sibolo_real"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textCReal"
    />

    <TextView
        android:id="@+id/edit_real1"
        android:text=""
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_real1"
        app:layout_constraintTop_toBottomOf="@+id/textCReal"
        />

    <TextView
        android:id="@+id/text_cons1"
        android:text="@string/titulo_consumo"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textCReal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/edit_cons1"
        android:text=""
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_cons1"
        app:layout_constraintTop_toBottomOf="@id/textCReal"
        />



    <TextView
        android:id="@+id/textCMes"
        android:text="@string/titulo_previsao_mes"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_cons1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_real2"
        android:text="@string/sibolo_real"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textCMes"
        />

    <TextView
        android:id="@+id/edit_real2"
        android:text=""
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_real2"
        app:layout_constraintTop_toBottomOf="@+id/textCMes"
        />

    <TextView
        android:id="@+id/text_cons2"
        android:text="@string/titulo_consumo"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/edit_real2"
        app:layout_constraintTop_toBottomOf="@id/textCMes"
        />

    <TextView
        android:id="@+id/edit_cons2"
        android:text=""
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_cons2"
        app:layout_constraintTop_toBottomOf="@id/textCMes"
        />

    <TextView
        android:id="@+id/text_pot"
        android:text="@string/titulo_potecia"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_real2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/edit_pot"
        android:text=""
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_marginLeft="-20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text_pot"
        app:layout_constraintTop_toBottomOf="@id/text_real2"
        />

    <Button
        android:id="@+id/bt_deslogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Deslogar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:backgroundTint="@color/teal_700"
        android:padding="20dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_pot"
        />



</androidx.constraintlayout.widget.ConstraintLayout>